# 1-course

./: README.md
Lab2/: CMakeLists.txt  main.cpp
Lab3/: CMakeLists.txt  main.cpp
SFMLproject — копия/: CMakeLists.txt  main.cpp  map.h
project-2/: CMakeLists.txt  main.cpp
zadacha3_2semestr/: CMakeLists.txt  main.cpp
